--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PowerCowo</title>
+      <!-- Contentsquare tracking script -->
+    <script src="https://t.contentsquare.net/uxa/8b306008b1822.js"></script>
   </head>
   <body>
     <div id="root"></div>
