--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="color-scheme" content="light only">
     <title>PowerCowo</title>
       <!-- Contentsquare tracking script -->
     <script src="https://t.contentsquare.net/uxa/8b306008b1822.js"></script>
